# download-for-eagle

./: .gitignore  ACCEPTANCE.md  AGENTS.md  CONTEXT.md  COPYING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  STATUS.md  TASKS.md  design-qa.md  pyproject.toml
chrome-extension/: background.js  bootstrap.js  content.js  manifest.firefox.json  manifest.json  popup.css  popup.html  popup.js
docs/: ARCHITECTURE.md  CAT_CATCH_MIGRATION_PLAN.md  DECISIONS.md  EXTENSION_UI_REDESIGN.md  FEATURE_PARITY_MATRIX.md  INSTALLATION_AND_ROLLBACK.md  RELEASE_VERIFICATION_1.0.0.md  RELEASE_VERIFICATION_1.1.0.md  RELEASE_VERIFICATION_1.1.1.md  RELEASE_VERIFICATION_1.1.10.md  RELEASE_VERIFICATION_1.1.11.md  RELEASE_VERIFICATION_1.1.12.md  RELEASE_VERIFICATION_1.1.2.md  RELEASE_VERIFICATION_1.1.3.md  RELEASE_VERIFICATION_1.1.4.md  RELEASE_VERIFICATION_1.1.5.md  RELEASE_VERIFICATION_1.1.6.md  RELEASE_VERIFICATION_1.1.7.md  RELEASE_VERIFICATION_1.1.8.md  RELEASE_VERIFICATION_1.1.9.md  RELEASE_VERIFICATION_1.2.1.md  RELEASE_VERIFICATION_1.2.10.md  RELEASE_VERIFICATION_1.2.11.md  RELEASE_VERIFICATION_1.2.2.md  RELEASE_VERIFICATION_1.2.3.md  RELEASE_VERIFICATION_1.2.5.md  RELEASE_VERIFICATION_1.2.6.md  RELEASE_VERIFICATION_1.2.7.md  RELEASE_VERIFICATION_1.2.8.md  RELEASE_VERIFICATION_1.2.9.md  UPSTREAM_PROVENANCE.md
installer/: Setup.cs  THIRD_PARTY_NOTICES.txt  给接收者的使用说明.txt
launcher/: Launcher.cs  assistant.pyw  idm_hook.pyw
media-tools/: FFMPEG-VERSION.json  README.md  YOUTUBE-RESOLVER-VERSION.json
packaging/: Build-Release.ps1  DownloadTransferStation.spec  Fetch-FFmpeg.ps1  (+7 more)
(+98 files in other folders)
